force-app/main/default/objects/Case/fields/Escalation_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Recommended_Action__c</fullName>
    <label>Escalation Recommended Action</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>AI-generated recommended action for the service agent. Populated by Agentforce_Escalation_Risk_Assessment. KAN-19.</description>
</CustomField>