force-app/main/default/objects/Case/fields/Escalation_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Risk_Level__c</fullName>
    <label>Escalation Risk Level</label>
    <type>Picklist</type>
    <description>AI-generated escalation risk classification. Values: Low, Medium, High, Critical. KAN-19.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>