force-app/main/default/objects/Case/fields/Escalation_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Risk_Score__c</fullName>
    <label>Escalation Risk Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>AI-generated escalation risk score from 0 (no risk) to 100 (critical). Populated by Agentforce_Escalation_Risk_Assessment. KAN-19.</description>
</CustomField>