force-app/main/default/objects/Case/fields/Escalation_Risk_Signals__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Risk_Signals__c</fullName>
    <label>Escalation Risk Signals</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>AI-detected escalation risk signals summary. Populated by Agentforce_Escalation_Risk_Assessment. KAN-19.</description>
</CustomField>