force-app/main/default/objects/Case/fields/Last_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Last_Risk_Assessment__c</fullName>
    <label>Last Risk Assessment</label>
    <type>DateTime</type>
    <description>Timestamp of the last Agentforce Escalation Risk Assessment run on this Case. Populated by EscalationRiskFromPromptAction. KAN-19.</description>
</CustomField>