force-app/main/default/objects/Case/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>